# miniml

./: .gitignore  CMakeLists.txt  README.md  antlr.sh
.github/workflows/: ci.yml
cmake/: AntlrMiniML.cmake
docs/: language.md
src/: main.cpp
src/ast/: Nodes.hpp  PrettyLoc.hpp
src/evaluator/: Eval.cpp  Eval.hpp  Value.hpp
src/ir/: IR.hpp
src/lexer_parser/: MiniML.g4
src/parser/: AstBuilder.hpp  ParserFacade.hpp  StrictErrorListener.hpp  lex_cli.cpp  parse_cli.cpp  parse_to_ast.hpp
src/semantic/: EnvStack.hpp  ScopeCheck.hpp
src/types/: Infer.cpp  Infer.hpp  Pretty.hpp  Scheme.cpp  Scheme.hpp  Subst.cpp  Subst.hpp  Type.cpp  Type.hpp  TypeCheck.hpp  Unify.cpp  Unify.hpp
src/utils/: vector_utils.hpp
tests/: test_parse_to_ast.cpp  test_parser.cpp  test_typechecker.cpp
tests/programs/bad/: if_type_fail.ml  polymorphic_type_error.ml  tuple5.ml  unbound.ml  unbound_in_body.ml  unbound_param.ml
tests/programs/evaluations/: and.ml  combined_let.ml  compare.ml  not.ml  parenthesis.ml  simple_app.ml  simple_arithmetic.ml  simple_equal.ml  simple_if.ml  simple_let.ml
tests/programs/ok/: app_chain.ml  app_type_check.ml  if_simple.ml  let_type_check.ml  nested_let.ml  nested_type.ml  paren.ml  polymorphic_let.xml  polymorphic_return.ml  tuple2.ml  tuple3.ml  tuple4.ml  tuple6.ml  tuple7.ml
